<!--
     * fragment_home.xml : Home Fragment layout
     *
     * This file is part of EPControl.
     *
     * Copyright (C) 2016  Jean-Baptiste Galet & Timothe Aeberhardt
     *
     * EPControl is free software: you can redistribute it and/or modify
     * it under the terms of the GNU General Public License as published by
     * the Free Software Foundation, either version 3 of the License, or
     * (at your option) any later version.
     *
     * EPControl is distributed in the hope that it will be useful,
     * but WITHOUT ANY WARRANTY; without even the implied warranty of
     * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     * GNU General Public License for more details.
     *
     * You should have received a copy of the GNU General Public License
     * along with EPControl.  If not, see <http://www.gnu.org/licenses/>.
    */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.pokesec.epcontrol.HomeFragment"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="155dp"
        android:id="@+id/homeImageView"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/img_logo"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="20dp"
        android:layout_margin="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/productName"
        android:id="@+id/productNameTextView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:text="@string/productCopyright"
        android:id="@+id/copyrightTextView"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:text="Enroll device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enroll_button" />
</LinearLayout>
